<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MajidDelbandam</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="level1">Level1</string>
    <string name="sib">sib</string>
    <string name="saz">saz</string>
    <string name="SharedPreferencesFileName">UsernamesAndPasswords</string>
    <string name="Coins">Coins</string>
	<string name="Enter">Enter</string>
	<string name="accept">قبوله!</string>
	<string name="rahnamaE1">کلمه وسط تو مسیر جواب رو بده</string>
	<string name="rahnamaE2">چه کلمه هایی می تونم بنویسم</string>
	<string name="rahnamaE3">این مرحله رو رد کن</string>
	<string name="cancel">Cancel</string>
    <string name="buy_100_Coins">
1000 سکه 950 تومان    </string>
    <string name="buy_200_Coins">
2000 سکه 1800 تومان    </string>
    <string name="buy_500_Coins">
5000 سکه 4400 تومان    </string>
    <string name="select_a_char">
        "ابتدا یک حرف از آخرین کلمه را انتخاب کنید."
    </string>
    <string name="invalid_word">
        "این کلمه که معنی نداره!"
    </string>
    <string name="not_enough_coins">
        به میزان کافی سکه ندارید!
    </string>
    <integer name="short_vibrate_time">50</integer>
    <integer name="medium_vibrate_time">100</integer>
    <integer name="long_vibrate_time">200</integer>
    <integer name="win_fragment_main">10</integer>
    <integer name="win_fragment_margin">1</integer>
</resources>