<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginLeft="40dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/frame2"
    >
    <LinearLayout
            android:id="@+id/R2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

        <ImageView
                android:id="@+id/R2_image"
                android:layout_width="115dp"
                android:layout_height="115dp"
                android:src="@drawable/coin20" />

        <TextView
                android:id="@+id/R2_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rahnamaE2"
                android:textSize="30dp"
                android:textColor="@color/Black"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/R1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

    <TextView
        android:id="@+id/R1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textColor="@color/Black"
        android:text="@string/rahnamaE1" />

    <ImageView
        android:id="@+id/R1_image"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:src="@drawable/coin100" />

	</LinearLayout>

	   <LinearLayout
        android:id="@+id/R3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

           <ImageView
                   android:id="@+id/R3_image"
                   android:layout_width="115dp"
                   android:layout_height="115dp"
                   android:src="@drawable/coin200" />
    <TextView
        android:id="@+id/R3_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textColor="@color/Black"
        android:text="@string/rahnamaE3" />

	</LinearLayout>

</LinearLayout>