<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="300dp"
    android:orientation="vertical"
    android:weightSum="3"
     >
    <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="fill_parent"
            android:weightSum="5"
            >
        <ImageView
        android:id="@+id/R1_image"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:src="@drawable/next" />
        <TextView
        android:id="@+id/R1_text"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="4"
        android:text="@string/rahnamaE1"
        android:gravity="center_vertical|left"
        android:textSize="30dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="fill_parent"
            android:weightSum="5"
            >
        <TextView
                android:id="@+id/R2_text"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="4"
                android:text="@string/rahnamaE2"
                android:gravity="center_vertical|right"
                android:textSize="30dp"/>
        <ImageView
                android:id="@+id/R2_image"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:src="@drawable/next"

                />
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="fill_parent"
            android:weightSum="5"
            >
        <ImageView
                android:id="@+id/R3_image"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:src="@drawable/next" />
        <TextView
                android:id="@+id/R3_text"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="4"
                android:text="@string/rahnamaE3"
                android:gravity="center_vertical|left"
                android:textSize="30dp"/>
    </LinearLayout>
    <!--<LinearLayout-->
            <!--android:id="@+id/R1"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:orientation="horizontal" >-->

        <!--<TextView-->
                <!--android:id="@+id/R1_text"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/rahnamaE1" />-->

        <!--<ImageView-->
                <!--android:id="@+id/R1_image"-->
                <!--android:layout_width="45dp"-->
                <!--android:layout_height="fill_parent"-->
                <!--android:src="@drawable/next" />-->

    <!--</LinearLayout>-->

    <!--<LinearLayout-->
            <!--android:id="@+id/R2"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:orientation="horizontal" >-->

        <!--<ImageView-->
                <!--android:id="@+id/R2_image"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_weight="1"-->
                <!--android:layout_height="fill_parent"-->
                <!--android:src="@drawable/next" />-->

        <!--<TextView-->
                <!--android:id="@+id/R2_text"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="fill_parent"-->
                <!--android:layout_weight="4"-->
                <!--android:text="@string/rahnamaE2" />-->
    <!--</LinearLayout>-->

    <!--<LinearLayout-->
            <!--android:id="@+id/R3"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:orientation="horizontal" >-->
        <!--<TextView-->
                <!--android:id="@+id/R3_text"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="4"-->
                <!--android:text="@string/rahnamaE3" />-->

        <!--<ImageView-->
                <!--android:id="@+id/R3_image"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="fill_parent"-->
                <!--android:layout_weight="1"-->
                <!--android:src="@drawable/next" />-->

    <!--</LinearLayout>-->


</LinearLayout>